#8 Add compatibility to Microsoft FHIR Server